--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -64,7 +64,7 @@ justify-content: center;
   &:before {
       content: "“";
       position: absolute;
-      left: -.7em;
+      left: -.4em;
   }
   
   &:after {
